force-app/main/default/objects/B2b_NrDetails__c/fields/B2b_Status__c.field-meta.xml
<CustomField>
    <fullName>B2b_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New - Default</fullName>
            </value>
            <value>
                <fullName>To be Extracted</fullName>
            </value>
            <value>
                <fullName>Extracted</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>To be Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>