force-app/main/default/objects/B2b_NrDetails__c/fields/ContractID__c.field-meta.xml
<CustomField>
    <fullName>ContractID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Business_Contract__c</referenceTo>
    <relationshipLabel>Negotiated Rates</relationshipLabel>
    <relationshipName>Negotiated_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>