force-app/main/default/objects/B2b_NrDetails__c/fields/GDS_Air_Standard_Premier_Tariff_Codes__c.field-meta.xml
<CustomField>
    <fullName>GDS_Air_Standard_Premier_Tariff_Codes__c</fullName>
    <label>GDS Air Standard Premier Tariff Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>