force-app/main/default/objects/B2b_NrDetails__c/fields/S3_BeNe_Standard_Premier_Tariff_Codes__c.field-meta.xml
<CustomField>
    <fullName>S3_BeNe_Standard_Premier_Tariff_Codes__c</fullName>
    <label>S3 &amp; BeNe Standard Premier Tariff Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>