force-app/main/default/objects/B2b_NrDetails__c/fields/S3_Extract__c.field-meta.xml
<CustomField>
    <fullName>S3_Extract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S3 Extract</label>
    <type>Checkbox</type>
</CustomField>