force-app/main/default/objects/B2b_NrDetails__c/recordTypes/Negotiated_Rate_Continent.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Rate_Continent</fullName>
    <active>true</active>
    <label>Negotiated Rate Continent</label>
</RecordType>