force-app/main/default/objects/B2b_NrDetails__c/recordTypes/Negotiated_Rate_London.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Rate_London</fullName>
    <active>true</active>
    <label>Negotiated Rate London</label>
</RecordType>