force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2b_Block_To_Be_Extracted.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_Block_To_Be_Extracted</fullName>
    <active>true</active>
    <description>If Start Date is empty you can&apos;t pass the status to &quot;To be extracted&quot;.</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
ISPICKVAL(B2b_Status__c, &apos;To be Extracted&apos;),
ISCHANGED(B2b_Status__c),
ISBLANK(B2b_RouteStartDate__c)
)</errorConditionFormula>
    <errorMessage>If Start Date is empty you can&apos;t pass the status to &quot;To be extracted&quot;.</errorMessage>
</ValidationRule>