force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2b_BlockNRDIfNRNotActive.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_BlockNRDIfNRNotActive</fullName>
    <active>true</active>
    <description>Can&apos;t create Negotiated Rate on inactive Contract.</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
ISNEW(),
ISPICKVAL(ContractID__r.B2b_Status__c, &apos;Inactive&apos;)
)</errorConditionFormula>
    <errorMessage>Can&apos;t create Negotiated Rate on inactive Contract.</errorMessage>
</ValidationRule>