force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2b_BlockPercentageForClass.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_BlockPercentageForClass</fullName>
    <active>true</active>
    <description>Block some percentage for some class.</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
OR(
OR(
B2b_PercentageDiscountFirst__c = 1,
B2b_PercentageDiscountFirst__c = 2,
B2b_PercentageDiscountFirst__c = 3,
B2b_PercentageDiscountFirst__c = 4,
B2b_PercentageDiscountFirst__c = 9,
B2b_PercentageDiscountFirst__c = 11,
B2b_PercentageDiscountFirst__c = 13,
B2b_PercentageDiscountFirst__c = 21,
B2b_PercentageDiscountFirst__c = 22,
B2b_PercentageDiscountFirst__c = 23,
B2b_PercentageDiscountFirst__c = 24,
B2b_PercentageDiscountFirst__c = 25
),
OR(
B2b_PercentageDiscountComfort__c = 1,
B2b_PercentageDiscountComfort__c = 2,
B2b_PercentageDiscountComfort__c = 3,
B2b_PercentageDiscountComfort__c = 9,
B2b_PercentageDiscountComfort__c = 11,
B2b_PercentageDiscountComfort__c = 13,
B2b_PercentageDiscountComfort__c = 21,
B2b_PercentageDiscountComfort__c = 22,
B2b_PercentageDiscountComfort__c = 23,
B2b_PercentageDiscountComfort__c = 24,
B2b_PercentageDiscountComfort__c = 25
),
OR(
B2b_PercentageDiscountStandard__c = 1,
B2b_PercentageDiscountStandard__c = 3,
B2b_PercentageDiscountStandard__c = 7,
B2b_PercentageDiscountStandard__c = 9,
B2b_PercentageDiscountStandard__c = 11,
B2b_PercentageDiscountStandard__c = 13,
B2b_PercentageDiscountStandard__c = 23,
B2b_PercentageDiscountStandard__c = 24,
B2b_PercentageDiscountStandard__c = 25
)
)
)</errorConditionFormula>
    <errorMessage>Percentage not authorized for class.</errorMessage>
</ValidationRule>