force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2B_Exclude_values_Comfort.validationRule-meta.xml
<ValidationRule>
    <fullName>B2B_Exclude_values_Comfort</fullName>
    <active>true</active>
    <description>Can&apos;t pass the status from &quot;Extracted/Integrated&quot; to &quot;To be extracted&quot;.</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
OR(
B2b_PercentageDiscountComfort__c = 0.01,
B2b_PercentageDiscountComfort__c = 0.02,
B2b_PercentageDiscountComfort__c = 0.03,
B2b_PercentageDiscountComfort__c = 0.09,
B2b_PercentageDiscountComfort__c = 0.11,
B2b_PercentageDiscountComfort__c = 0.13,
B2b_PercentageDiscountComfort__c &gt; 0.20
)
)</errorConditionFormula>
    <errorMessage>Percentage is invalid, it cannot be 1%, 2%, 3%, 4%, 9%, 11%, 13% or more than 20%</errorMessage>
</ValidationRule>