force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2B_Exclude_values_Standard.validationRule-meta.xml
<ValidationRule>
    <fullName>B2B_Exclude_values_Standard</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
OR(
B2b_PercentageDiscountStandard__c = 0.01,
B2b_PercentageDiscountStandard__c = 0.03,
B2b_PercentageDiscountStandard__c = 0.07,
B2b_PercentageDiscountStandard__c = 0.09,
B2b_PercentageDiscountStandard__c = 0.11,
B2b_PercentageDiscountStandard__c = 0.13,
B2b_PercentageDiscountStandard__c &gt;= 0.23
)
)</errorConditionFormula>
    <errorMessage>Percentage invalid, it cannot be 1%, 3%, 7%, 9%, 11%, 13% equal or above 23%</errorMessage>
</ValidationRule>