force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2b_NegotiatedRateStatusRules.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_NegotiatedRateStatusRules</fullName>
    <active>true</active>
    <description>Users cannot pass from &quot;New&quot; status to &quot;To be approved&quot; or &quot;To be extracted&quot; if the field for the % given (1st, 2nd, 3rd) are not completed and start date too)</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
OR(
ISPICKVAL(B2b_Status__c, &apos;To be Approved&apos;),
ISPICKVAL(B2b_Status__c, &apos;To be Extracted&apos;)
),
OR(
ISBLANK(B2b_PercentageDiscountFirst__c),
ISBLANK(B2b_PercentageDiscountComfort__c),
ISBLANK(B2b_PercentageDiscountStandard__c) )
)</errorConditionFormula>
    <errorMessage>You can&apos;t pass the status to &quot;To be approved&quot; or &quot;To be extracted&quot; if the field for the % given (1st, 2nd, 3rd) are not completed and start date too)</errorMessage>
</ValidationRule>