force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2b_NeogtiatedRateStatusOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_NeogtiatedRateStatusOrder</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT($User.B2b_Bypass_Validation_Rules__c),
    ISCHANGED(B2b_Status__c),
    OR(
        AND(
            ISPICKVAL(B2b_Status__c,&apos;Extracted&apos;),
            ISPICKVAL(PRIORVALUE(B2b_Status__c),&apos;Integrated&apos;)
        ),
        AND(
            ISPICKVAL(B2b_Status__c,&apos;Integrated&apos;),
            NOT(ISPICKVAL(PRIORVALUE(B2b_Status__c),&apos;Extracted&apos;))
        ),
        AND(
            ISPICKVAL(B2b_Status__c,&apos;Extracted&apos;),
            NOT(ISPICKVAL(PRIORVALUE(B2b_Status__c),&apos;To be Extracted&apos;))
        ),
        AND(
            ISPICKVAL(B2b_Status__c,&apos;To be Extracted&apos;),
            ISPICKVAL(PRIORVALUE(B2b_Status__c),&apos;Extracted&apos;)
        ),
        AND(
            ISPICKVAL(B2b_Status__c,&apos;To be Extracted&apos;),
            ISPICKVAL(PRIORVALUE(B2b_Status__c),&apos;Integrated&apos;)
        ),
        AND(
            ISPICKVAL(B2b_Status__c,&apos;New&apos;),
            ISPICKVAL(PRIORVALUE(B2b_Status__c),&apos;Extracted&apos;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Please respect the status order</errorMessage>
</ValidationRule>