force-app/main/default/objects/B2b_NrDetails__c/listViews/Pricing_Team_B2b_NrDetails.listView-meta.xml
<ListView>
    <fullName>Pricing_Team_B2b_NrDetails</fullName>
    <filterScope>Queue</filterScope>
    <label>Pricing Team</label>
    <queue>Pricing_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>